--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,6 +6,6 @@
     <body>
         <h1>Welcome to Home page!</h1>
         
-        <p>Click <a th:href="@{/hello}">here</a> to see a greeting.</p>
+        <p> <a th:href="@{/persons/list}">Person table</a></p>
     </body>
 </html>
